# auto-monitoring-hackathon

./: .gitignore  AGENT.md  CHANGELOG.md  PLAN.md  README.md  UI_PLAN.md
apigw-rest-api/: infra.py  pyproject.toml
apigw-rest-api/src/: collector.yaml
apigw-rest-api/src/hello_api/: __init__.py  aws_lambda_handler.py  errors.py  main.py  routes.py  schemas.py  settings.py
apigw-rest-api/src/hello_api/monitoring/: __init__.py  logging.py  metrics.py  tracing.py
apigw-rest-api/tests/: conftest.py
apigw-rest-api/tests/fixtures/: api_client.py
apigw-rest-api/tests/functional_tests/: test__routes__against_running_server.py
apigw-rest-api/tests/unit_tests/: test__routes__error_cases.py  test__routes__happy_path.py
cluster-stats-ui/: CHANGELOG.md  SPEC.md
cluster-stats-ui/backend/: README.md  pyproject.toml
cluster-stats-ui/backend/src/cs_backend/: k8s.py  main.py  mimir.py  routes.py  schemas.py  settings.py
cluster-stats-ui/backend/tests/: conftest.py
cluster-stats-ui/backend/tests/fixtures/: api_client.py  mimir_responses.py
cluster-stats-ui/backend/tests/functional_tests/: test__mimir_endpoints.py  test__routes__against_running_server.py
cluster-stats-ui/backend/tests/unit_tests/: test__mimir_client.py  test__nodes_endpoint.py  test__nodes_history_endpoint.py  test__routes__error_cases.py  test__routes__happy_path.py  test__static_serving.py
docs/: cluster-view.html  external-access-plan.md  metric-streams-guide.md
fleet-stats-ui/: CHANGELOG.md  SPEC.md  run
infra/: .env.example  DEPLOYMENT_NOTES.md  README.md  cdk.context.json  cdk_eks_cluster.py  diagram.py  generate-kubeconfig.sh  github-oidc-stack.py  infra.py  metric-streams-stack.py  oauth2-proxy-values.yaml  run  skypilot-values.yaml
(+82 files in other folders)
